--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
         </div>
     </div>
+    <script></script>
     <script type="module" src="render.js"></script>
     <script type="module" src="main.js"></script>
     <script type="module" src="renderList.js"></script>
