--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <title>Погода</title>
+    <link rel="icon" href="icon.png" type="image/x-icon">
+    <title>Weather</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
