Added saving and update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <form>
                     <input class="input" placeholder="City" type="text">
                     <button>
-                        <img id="search" src="search.png" alt="">
+                        <img id="search" src="pictures/search.png" alt="">
                     </button>
                 </form>
             </div>
@@ -42,12 +42,12 @@
             </div>
             <div class="tabs">
                 <div class="tabs_now shadow">
-                    <img id="home" src="det2.png" alt="" srcset="">
+                    <img id="home" src="pictures/det2.png" alt="" srcset="">
                     <div class="now_text">Now
                     </div>
                 </div>
                 <div class="tabs_details">
-                    <img id="det" src="det3.png" alt="" srcset="">
+                    <img id="det" src="pictures/det3.png" alt="" srcset="">
                     <div class="details_text">Details
                     </div>
                 </div>
